project('listar-cadastro', 'cpp', default_options : ['cpp_std=c++20'])

executable('listar-cadastro', [
    'main.cpp',
    'my_window.cpp',
    'cadastro_window.cpp',
    'listagem_window.cpp',
    'pessoas_storage.cpp',
    'entry_box.cpp',
], dependencies: [
    dependency('gtkmm-3.0'),
    dependency('boost'),
])

