persistent_files = files([
    'boolean.cpp', 
    'Column.cpp',
    'Condition.cpp',
    'datetime.cpp',
    'Exception.cpp',
    'null.cpp',
    'Sql.cpp',
    'TableDefinition.cpp',
    'Transaction.cpp',
    'boolean.cpp',
    'driver/Connection.cpp',
    'driver/Database.cpp',
    'driver/Extractor.cpp',
    'driver/Pool.cpp',
    'driver/Statement.cpp',
    'sqlite/Connection.cpp',
    'sqlite/Database.cpp',
    'sqlite/Extractor.cpp',
    'sqlite/Savepoint.cpp',
    'sqlite/Statement.cpp',
])
